libs/librknn_api/include/rknn_api.h

typedef uint32_t rknn_context;
typedef uint64_t rknn_context;
typedef enum _rknn_tensor_type {
    RKNN_TENSOR_FLOAT32 = 0,                            
    RKNN_TENSOR_FLOAT16,                                
    RKNN_TENSOR_INT8,                                   
    RKNN_TENSOR_UINT8,                                  
    RKNN_TENSOR_INT16,                                  
    RKNN_TENSOR_UINT16,                                 
    RKNN_TENSOR_INT32,                                  
    RKNN_TENSOR_UINT32,                                 
    RKNN_TENSOR_INT64,                                  
    RKNN_TENSOR_BOOL,
    RKNN_TENSOR_INT4,
    RKNN_TENSOR_TYPE_MAX
} rknn_tensor_type;
typedef enum _rknn_tensor_qnt_type {
    RKNN_TENSOR_QNT_NONE = 0,                           
    RKNN_TENSOR_QNT_DFP,                                
    RKNN_TENSOR_QNT_AFFINE_ASYMMETRIC,                  
    RKNN_TENSOR_QNT_MAX
} rknn_tensor_qnt_type;
typedef enum _rknn_tensor_format {
    RKNN_TENSOR_NCHW = 0,                               
    RKNN_TENSOR_NHWC,                                   
    RKNN_TENSOR_NC1HWC2,                                
    RKNN_TENSOR_UNDEFINED,
    RKNN_TENSOR_FORMAT_MAX
} rknn_tensor_format;
typedef enum _rknn_core_mask {
    RKNN_NPU_CORE_AUTO = 0,                                       
    RKNN_NPU_CORE_0 = 1,                                          
    RKNN_NPU_CORE_1 = 2,                                          
    RKNN_NPU_CORE_2 = 4,                                          
    RKNN_NPU_CORE_0_1 = RKNN_NPU_CORE_0 | RKNN_NPU_CORE_1,        
    RKNN_NPU_CORE_0_1_2 = RKNN_NPU_CORE_0_1 | RKNN_NPU_CORE_2,    
    RKNN_NPU_CORE_UNDEFINED,
} rknn_core_mask;
typedef struct _rknn_tensor_attr {
    uint32_t index;                                     
    uint32_t n_dims;                                    
    uint32_t dims[RKNN_MAX_DIMS];                       
    char name[RKNN_MAX_NAME_LEN];                       
    uint32_t n_elems;                                   
    uint32_t size;                                      
    rknn_tensor_format fmt;                             
    rknn_tensor_type type;                              
    rknn_tensor_qnt_type qnt_type;                      
    int8_t fl;                                          
    int32_t zp;                                         
    float scale;                                        
    uint32_t w_stride;                                  
    uint32_t size_with_stride;                          
    uint8_t pass_through;                               
    uint32_t h_stride;                                  
} rknn_tensor_attr;
typedef enum _rknn_mem_sync_mode {
    RKNN_MEMORY_SYNC_TO_DEVICE = 0x1, 
    RKNN_MEMORY_SYNC_FROM_DEVICE = 0x2, 
    RKNN_MEMORY_SYNC_BIDIRECTIONAL = RKNN_MEMORY_SYNC_TO_DEVICE | RKNN_MEMORY_SYNC_FROM_DEVICE, 
} rknn_mem_sync_mode;
typedef struct _rknn_tensor_memory {
    void*            virt_addr;                         
    uint64_t         phys_addr;                         
    int32_t          fd;                                
    int32_t          offset;                            
    uint32_t         size;                              
    uint32_t         flags;                             
    void *           priv_data;                         
} rknn_tensor_mem;
typedef struct _rknn_input {
    uint32_t index;                                     
    void* buf;                                          
    uint32_t size;                                      
    uint8_t pass_through;                               
    rknn_tensor_type type;                              
    rknn_tensor_format fmt;                             
} rknn_input;
typedef struct _rknn_output {
    uint8_t want_float;                                 
    uint8_t is_prealloc;                                
    uint32_t index;                                     
    void* buf;                                          
    uint32_t size;                                      
} rknn_output;
typedef struct _rknn_run_extend {
    uint64_t frame_id;                                  
    int32_t non_block;                                  
    int32_t timeout_ms;                                 
    int32_t fence_fd;                                   
} rknn_run_extend;
typedef struct _rknn_output_extend {
    uint64_t frame_id;                                  
} rknn_output_extend;
int rknn_inputs_set(rknn_context context, uint32_t n_inputs, rknn_input inputs[]);
int rknn_set_batch_core_num(rknn_context context, int core_num);
int rknn_set_core_mask(rknn_context context, rknn_core_mask core_mask);
int rknn_run(rknn_context context, rknn_run_extend* extend);
int rknn_wait(rknn_context context, rknn_run_extend* extend);
int rknn_outputs_get(rknn_context context, uint32_t n_outputs, rknn_output outputs[], rknn_output_extend* extend);
int rknn_outputs_release(rknn_context context, uint32_t n_ouputs, rknn_output outputs[]);
rknn_tensor_mem* rknn_create_mem_from_phys(rknn_context ctx, uint64_t phys_addr, void *virt_addr, uint32_t size);
rknn_tensor_mem* rknn_create_mem_from_fd(rknn_context ctx, int32_t fd, void *virt_addr, uint32_t size, int32_t offset);
rknn_tensor_mem* rknn_create_mem_from_mb_blk(rknn_context ctx, void *mb_blk, int32_t offset);
rknn_tensor_mem* rknn_create_mem(rknn_context ctx, uint32_t size);
rknn_tensor_mem* rknn_create_mem2(rknn_context ctx, uint64_t size, uint64_t alloc_flags);
int rknn_destroy_mem(rknn_context ctx, rknn_tensor_mem *mem);
int rknn_set_weight_mem(rknn_context ctx, rknn_tensor_mem *mem);
int rknn_set_internal_mem(rknn_context ctx, rknn_tensor_mem *mem);
int rknn_set_io_mem(rknn_context ctx, rknn_tensor_mem *mem, rknn_tensor_attr *attr);
int rknn_set_input_shape(rknn_context ctx, rknn_tensor_attr* attr);
int rknn_set_input_shapes(rknn_context ctx, uint32_t n_inputs, rknn_tensor_attr attr[]);
int rknn_mem_sync(rknn_context context, rknn_tensor_mem* mem, rknn_mem_sync_mode mode);