libs/librknn_api/include/rknn_matmul_api.h

typedef rknn_context rknn_matmul_ctx;
typedef struct _rknn_quant_params
{
  char name[RKNN_MAX_NAME_LEN];
  float* scale;
  int    scale_len;
  int32_t* zp;
  int      zp_len;
} rknn_quant_params;