src/bindings.rs

unsafe extern "C" {
    pub fn rknn_inputs_set(
        context: rknn_context,
        n_inputs: u32,
        inputs: *mut rknn_input,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_set_batch_core_num(
        context: rknn_context,
        core_num: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_set_core_mask(
        context: rknn_context,
        core_mask: rknn_core_mask,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_run(context: rknn_context, extend: *mut rknn_run_extend) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_wait(context: rknn_context, extend: *mut rknn_run_extend) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_outputs_get(
        context: rknn_context,
        n_outputs: u32,
        outputs: *mut rknn_output,
        extend: *mut rknn_output_extend,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_outputs_release(
        context: rknn_context,
        n_ouputs: u32,
        outputs: *mut rknn_output,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_create_mem_from_phys(
        ctx: rknn_context,
        phys_addr: u64,
        virt_addr: *mut ::std::os::raw::c_void,
        size: u32,
    ) -> *mut rknn_tensor_mem;
}
unsafe extern "C" {
    pub fn rknn_create_mem_from_fd(
        ctx: rknn_context,
        fd: i32,
        virt_addr: *mut ::std::os::raw::c_void,
        size: u32,
        offset: i32,
    ) -> *mut rknn_tensor_mem;
}
unsafe extern "C" {
    pub fn rknn_create_mem_from_mb_blk(
        ctx: rknn_context,
        mb_blk: *mut ::std::os::raw::c_void,
        offset: i32,
    ) -> *mut rknn_tensor_mem;
}
unsafe extern "C" {
    pub fn rknn_create_mem(ctx: rknn_context, size: u32) -> *mut rknn_tensor_mem;
}
unsafe extern "C" {
    pub fn rknn_create_mem2(ctx: rknn_context, size: u64, alloc_flags: u64)
        -> *mut rknn_tensor_mem;
}
unsafe extern "C" {
    pub fn rknn_destroy_mem(ctx: rknn_context, mem: *mut rknn_tensor_mem) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_set_weight_mem(
        ctx: rknn_context,
        mem: *mut rknn_tensor_mem,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_set_internal_mem(
        ctx: rknn_context,
        mem: *mut rknn_tensor_mem,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_set_io_mem(
        ctx: rknn_context,
        mem: *mut rknn_tensor_mem,
        attr: *mut rknn_tensor_attr,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_set_input_shape(
        ctx: rknn_context,
        attr: *mut rknn_tensor_attr,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_set_input_shapes(
        ctx: rknn_context,
        n_inputs: u32,
        attr: *mut rknn_tensor_attr,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_mem_sync(
        context: rknn_context,
        mem: *mut rknn_tensor_mem,
        mode: rknn_mem_sync_mode,
    ) -> ::std::os::raw::c_int;
}
pub type rknn_custom_op_interal_context = u64;
pub const _rknn_target_type_RKNN_TARGET_TYPE_CPU: _rknn_target_type = 1;
pub const _rknn_target_type_RKNN_TARGET_TYPE_GPU: _rknn_target_type = 2;
pub const _rknn_target_type_RKNN_TARGET_TYPE_MAX: _rknn_target_type = 3;
pub type _rknn_target_type = ::std::os::raw::c_uint;
pub use self::_rknn_target_type as rknn_target_type;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _rknn_gpu_op_context {
    pub cl_context: *mut ::std::os::raw::c_void,
    pub cl_command_queue: *mut ::std::os::raw::c_void,
    pub cl_kernel: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _rknn_gpu_op_context"][::std::mem::size_of::<_rknn_gpu_op_context>() - 24usize];
    ["Alignment of _rknn_gpu_op_context"][::std::mem::align_of::<_rknn_gpu_op_context>() - 8usize];
    ["Offset of field: _rknn_gpu_op_context::cl_context"]
        [::std::mem::offset_of!(_rknn_gpu_op_context, cl_context) - 0usize];
    ["Offset of field: _rknn_gpu_op_context::cl_command_queue"]
        [::std::mem::offset_of!(_rknn_gpu_op_context, cl_command_queue) - 8usize];
    ["Offset of field: _rknn_gpu_op_context::cl_kernel"]
        [::std::mem::offset_of!(_rknn_gpu_op_context, cl_kernel) - 16usize];
};
pub type rknn_gpu_op_context = _rknn_gpu_op_context;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _rknn_custom_op_context {
    pub target: rknn_target_type,
    pub internal_ctx: rknn_custom_op_interal_context,
    pub gpu_ctx: rknn_gpu_op_context,
    pub priv_data: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _rknn_custom_op_context"][::std::mem::size_of::<_rknn_custom_op_context>() - 48usize];
    ["Alignment of _rknn_custom_op_context"]
        [::std::mem::align_of::<_rknn_custom_op_context>() - 8usize];
    ["Offset of field: _rknn_custom_op_context::target"]
        [::std::mem::offset_of!(_rknn_custom_op_context, target) - 0usize];
    ["Offset of field: _rknn_custom_op_context::internal_ctx"]
        [::std::mem::offset_of!(_rknn_custom_op_context, internal_ctx) - 8usize];
    ["Offset of field: _rknn_custom_op_context::gpu_ctx"]
        [::std::mem::offset_of!(_rknn_custom_op_context, gpu_ctx) - 16usize];
    ["Offset of field: _rknn_custom_op_context::priv_data"]
        [::std::mem::offset_of!(_rknn_custom_op_context, priv_data) - 40usize];
};
pub type rknn_custom_op_context = _rknn_custom_op_context;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _rknn_custom_op_tensor {
    pub attr: rknn_tensor_attr,
    pub mem: rknn_tensor_mem,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _rknn_custom_op_tensor"][::std::mem::size_of::<_rknn_custom_op_tensor>() - 416usize];
    ["Alignment of _rknn_custom_op_tensor"]
        [::std::mem::align_of::<_rknn_custom_op_tensor>() - 8usize];
    ["Offset of field: _rknn_custom_op_tensor::attr"]
        [::std::mem::offset_of!(_rknn_custom_op_tensor, attr) - 0usize];
    ["Offset of field: _rknn_custom_op_tensor::mem"]
        [::std::mem::offset_of!(_rknn_custom_op_tensor, mem) - 376usize];
};
pub type rknn_custom_op_tensor = _rknn_custom_op_tensor;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _rknn_custom_op_attr {
    pub name: [::std::os::raw::c_char; 256usize],
    pub dtype: rknn_tensor_type,
    pub n_elems: u32,
    pub data: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _rknn_custom_op_attr"][::std::mem::size_of::<_rknn_custom_op_attr>() - 272usize];
    ["Alignment of _rknn_custom_op_attr"][::std::mem::align_of::<_rknn_custom_op_attr>() - 8usize];
    ["Offset of field: _rknn_custom_op_attr::name"]
        [::std::mem::offset_of!(_rknn_custom_op_attr, name) - 0usize];
    ["Offset of field: _rknn_custom_op_attr::dtype"]
        [::std::mem::offset_of!(_rknn_custom_op_attr, dtype) - 256usize];
    ["Offset of field: _rknn_custom_op_attr::n_elems"]
        [::std::mem::offset_of!(_rknn_custom_op_attr, n_elems) - 260usize];
    ["Offset of field: _rknn_custom_op_attr::data"]
        [::std::mem::offset_of!(_rknn_custom_op_attr, data) - 264usize];
};
pub type rknn_custom_op_attr = _rknn_custom_op_attr;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _rknn_custom_op {
    pub version: u32,
    pub target: rknn_target_type,
    pub op_type: [::std::os::raw::c_char; 256usize],
    pub cl_kernel_name: [::std::os::raw::c_char; 256usize],
    pub cl_kernel_source: *mut ::std::os::raw::c_char,
    pub cl_source_size: u64,
    pub cl_build_options: [::std::os::raw::c_char; 256usize],
    #[doc = " The callback function sets that the users need to code"]
    pub init: ::std::option::Option<
        unsafe extern "C" fn(
            op_ctx: *mut rknn_custom_op_context,
            inputs: *mut rknn_custom_op_tensor,
            n_inputs: u32,
            outputs: *mut rknn_custom_op_tensor,
            n_outputs: u32,
        ) -> ::std::os::raw::c_int,
    >,
    pub prepare: ::std::option::Option<
        unsafe extern "C" fn(
            op_ctx: *mut rknn_custom_op_context,
            inputs: *mut rknn_custom_op_tensor,
            n_inputs: u32,
            outputs: *mut rknn_custom_op_tensor,
            n_outputs: u32,
        ) -> ::std::os::raw::c_int,
    >,
    pub compute: ::std::option::Option<
        unsafe extern "C" fn(
            op_ctx: *mut rknn_custom_op_context,
            inputs: *mut rknn_custom_op_tensor,
            n_inputs: u32,
            outputs: *mut rknn_custom_op_tensor,
            n_outputs: u32,
        ) -> ::std::os::raw::c_int,
    >,
    pub compute_native: ::std::option::Option<
        unsafe extern "C" fn(
            op_ctx: *mut rknn_custom_op_context,
            inputs: *mut rknn_custom_op_tensor,
            n_inputs: u32,
            outputs: *mut rknn_custom_op_tensor,
            n_outputs: u32,
        ) -> ::std::os::raw::c_int,
    >,
    pub destroy: ::std::option::Option<
        unsafe extern "C" fn(op_ctx: *mut rknn_custom_op_context) -> ::std::os::raw::c_int,
    >,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _rknn_custom_op"][::std::mem::size_of::<_rknn_custom_op>() - 832usize];
    ["Alignment of _rknn_custom_op"][::std::mem::align_of::<_rknn_custom_op>() - 8usize];
    ["Offset of field: _rknn_custom_op::version"]
        [::std::mem::offset_of!(_rknn_custom_op, version) - 0usize];
    ["Offset of field: _rknn_custom_op::target"]
        [::std::mem::offset_of!(_rknn_custom_op, target) - 4usize];
    ["Offset of field: _rknn_custom_op::op_type"]
        [::std::mem::offset_of!(_rknn_custom_op, op_type) - 8usize];
    ["Offset of field: _rknn_custom_op::cl_kernel_name"]
        [::std::mem::offset_of!(_rknn_custom_op, cl_kernel_name) - 264usize];
    ["Offset of field: _rknn_custom_op::cl_kernel_source"]
        [::std::mem::offset_of!(_rknn_custom_op, cl_kernel_source) - 520usize];
    ["Offset of field: _rknn_custom_op::cl_source_size"]
        [::std::mem::offset_of!(_rknn_custom_op, cl_source_size) - 528usize];
    ["Offset of field: _rknn_custom_op::cl_build_options"]
        [::std::mem::offset_of!(_rknn_custom_op, cl_build_options) - 536usize];
    ["Offset of field: _rknn_custom_op::init"]
        [::std::mem::offset_of!(_rknn_custom_op, init) - 792usize];
    ["Offset of field: _rknn_custom_op::prepare"]
        [::std::mem::offset_of!(_rknn_custom_op, prepare) - 800usize];
    ["Offset of field: _rknn_custom_op::compute"]
        [::std::mem::offset_of!(_rknn_custom_op, compute) - 808usize];
    ["Offset of field: _rknn_custom_op::compute_native"]
        [::std::mem::offset_of!(_rknn_custom_op, compute_native) - 816usize];
    ["Offset of field: _rknn_custom_op::destroy"]
        [::std::mem::offset_of!(_rknn_custom_op, destroy) - 824usize];
};
pub type rknn_custom_op = _rknn_custom_op;
#[doc = " dlopen custom op with so required this function"]
pub type get_custom_op_func = ::std::option::Option<unsafe extern "C" fn() -> *mut rknn_custom_op>;
unsafe extern "C" {
    pub fn rknn_register_custom_ops(
        ctx: rknn_context,
        op: *mut rknn_custom_op,
        custom_op_num: u32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_custom_op_get_op_attr(
        op_ctx: *mut rknn_custom_op_context,
        attr_name: *const ::std::os::raw::c_char,
        op_attr: *mut rknn_custom_op_attr,
    );
}
pub type rknn_matmul_ctx = rknn_context;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _rknn_quant_params {
    pub name: [::std::os::raw::c_char; 256usize],
    pub scale: *mut f32,
    pub scale_len: i32,
    pub zp: *mut i32,
    pub zp_len: i32,
}
